methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:10: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
    while(isFacingTrail==true){
          ^