methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while (estSurBiscuit==false){
  	if(isFacingTrail(c)==false){
       gauche()
       if (isFacingTrail(c)==false){
         droite();droite()
       }
     }
  	while(isFacingTrail==true){
      baisseBrosse()
      leveBrosse()
      avance()
    }
  }
  prendBiscuit()
  baisseBrosse()
  leveBrosse()
}



def isFacingTrail(couleur : Color):Boolean = {
    if (estFaceMur==true){
      return false
  }
    else{
      avance()
      if (getCouleurSol()==couleur){
        recule()
        return true
      }
      else {
        recule()
        return false
      }
    }
}